gateway-api/coco-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: coco-route
  namespace: default
spec:
  parentRefs:
    - name: api-gateway
      sectionName: coco-https

  hostnames:
    - coco.praveen.info

  rules:
    - backendRefs:
        - name: frontend
          port: 80
